# axiom-conduit-runtime

./: CITATIONS.md  CMakeLists.txt  CONTRIBUTING.md  DISCLAIMER.md  NOTICE  README.md  REFERENCES.md  TECHNOLOGY_MAP.md
benchmarks/: CMakeLists.txt  bench_conduit.cpp
docs/adrs/: 002_UNION_BASED_SLAB_POOL.md
docs/architecture/: BENCHMARK_METHODOLOGY.md  MEMORY_MODEL_AND_PHYSICS.md  TOPOLOGY_AND_BACKPRESSURE.md
docs/operations/: DEPLOYMENT_AND_TUNING.md  SRE_TROUBLESHOOTING_RUNBOOK.md
docs/tutorials/: 01_CONCEPTS_AND_PIPELINES.md  02_MEMORY_POOL_IN_PRACTICE.md
examples/: 01_basic_pipeline.cpp  02_cxx20_heterogeneous_dispatch.cpp  03_cascading_heterogeneous_pipeline.cpp  04_lockfree_threading.cpp  05_sharded_cluster_routing.cpp  06_deterministic_fan_in_polling.cpp  07_hardware_isolated_sharding.cpp  08_backpressure_and_zero_leak_drops.cpp  11_stateful_order_book_padding.cpp  11_ultimate_logic_synthesis.cpp  12_heartbeat_and_timeout_injection.cpp  13_graceful_drain_on_sigint.cpp  CMakeLists.txt
roadmap_examples/: 09_network_zero_copy_ingress.cpp  10_layer9_wiretap_inspection.cpp
roadmap_tests/: test_network_boundaries.cpp
tests/: CMakeLists.txt  test_conduit.cpp  test_conduit_physics.cpp  test_event_ptr.cpp  test_full_dispatch_chain.cpp  test_hierarchical_execution_order.cpp  test_memory_physics.cpp  test_omnibus_integration.cpp  test_pipeline_ignored_events.cpp  test_pipeline_semantics.cpp  test_poller_edge_cases.cpp  test_pool.cpp  test_round_robin_switch.cpp  test_single_handler_cascade.cpp  test_type_safety_invariants.cpp
tests/runtime/: CMakeLists.txt
(+27 files in other folders)
